--- a/FinalProject/FinalProjectBackground.ipynb
+++ b/FinalProject/FinalProjectBackground.ipynb
@@ -1,6 +1,57 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "square-woman",
+   "metadata": {},
+   "source": [
+    "# Midterm Project Background (Title not decided yet)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ignored-spiritual",
+   "metadata": {},
+   "source": [
+    "*Ishaan Thakker*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "expensive-idaho",
+   "metadata": {},
+   "source": [
+    "## Problem"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "instructional-canal",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.1"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
