--- a/Day21/UnconventionalData.ipynb
+++ b/Day21/UnconventionalData.ipynb
@@ -1,9 +1,33 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "nonprofit-links",
+   "metadata": {},
+   "source": [
+    "# Unconventional Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "latin-spectrum",
+   "metadata": {},
+   "source": [
+    "<em>Ishaan Thakker</em>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "lasting-layer",
+   "metadata": {},
+   "source": [
+    "### PDF Extractor"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "unauthorized-belief",
+   "execution_count": 2,
+   "id": "superior-beach",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,8 +38,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "killing-motivation",
+   "execution_count": 3,
+   "id": "conditional-programming",
    "metadata": {},
    "outputs": [
     {
@@ -47,14 +71,14 @@
        "an           190\n",
        "their        182\n",
        "was          176\n",
-       "Data         171\n",
        "by           171\n",
+       "Data         171\n",
        "not          168\n",
        "I            155\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,8 +92,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "aging-sight",
+   "execution_count": 4,
+   "id": "bigger-circus",
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +248,7 @@
        "[75 rows x 5 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,8 +262,83 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "id": "valued-breeding",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "the        45\n",
+       "to         37\n",
+       "you        34\n",
+       "and        23\n",
+       "your       19\n",
+       "a          18\n",
+       "have       14\n",
+       "in         12\n",
+       "If         11\n",
+       "install    10\n",
+       "⇒          10\n",
+       "MinGW      10\n",
+       "then        9\n",
+       "Eclipse     9\n",
+       "choose      9\n",
+       "Step        8\n",
+       "on          8\n",
+       "1.          8\n",
+       "2.          8\n",
+       "You         8\n",
+       "In          7\n",
+       "or          7\n",
+       "C++         7\n",
+       "are         7\n",
+       "may         7\n",
+       "step        7\n",
+       "3.          7\n",
+       "Under       6\n",
+       "is          6\n",
+       "if          5\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "doc = fitz.open('InstallingEclipseInstructions.pdf')\n",
+    "text = \"\".join(page.get_text(\"text\") for page in doc)\n",
+    "words = pd.Series(text.split())\n",
+    "words.value_counts().head(30)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "basic-feedback",
+   "metadata": {},
+   "source": [
+    "### Reddit Image Transcriber"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "oriental-producer",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "\n",
+    "# Set a User Agent to avoid being blocked\n",
+    "data = requests.get(\"https://www.reddit.com/r/comics/.json\", headers = {'User-agent': 'your bot 0.1'}).json()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "boxed-lover",
+   "id": "agreed-poultry",
    "metadata": {},
    "outputs": [],
    "source": []
