--- a/Day21/UnconventionalData.ipynb
+++ b/Day21/UnconventionalData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "nonprofit-links",
+   "id": "sixth-plumbing",
    "metadata": {},
    "source": [
     "# Unconventional Data"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "latin-spectrum",
+   "id": "toxic-halifax",
    "metadata": {},
    "source": [
     "<em>Ishaan Thakker</em>"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "lasting-layer",
+   "id": "endangered-vinyl",
    "metadata": {},
    "source": [
     "### PDF Extractor"
@@ -26,8 +26,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "superior-beach",
+   "execution_count": 8,
+   "id": "marine-mixer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,8 +38,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "conditional-programming",
+   "execution_count": 9,
+   "id": "dependent-threshold",
    "metadata": {},
    "outputs": [
     {
@@ -71,14 +71,14 @@
        "an           190\n",
        "their        182\n",
        "was          176\n",
-       "by           171\n",
        "Data         171\n",
+       "by           171\n",
        "not          168\n",
        "I            155\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,8 +92,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "bigger-circus",
+   "execution_count": 10,
+   "id": "binary-kansas",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
        "[75 rows x 5 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,8 +262,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "valued-breeding",
+   "execution_count": 11,
+   "id": "collective-camping",
    "metadata": {},
    "outputs": [
     {
@@ -278,31 +278,31 @@
        "have       14\n",
        "in         12\n",
        "If         11\n",
+       "MinGW      10\n",
        "install    10\n",
        "⇒          10\n",
-       "MinGW      10\n",
        "then        9\n",
-       "Eclipse     9\n",
        "choose      9\n",
-       "Step        8\n",
+       "Eclipse     9\n",
        "on          8\n",
-       "1.          8\n",
-       "2.          8\n",
        "You         8\n",
-       "In          7\n",
+       "2.          8\n",
+       "1.          8\n",
+       "Step        8\n",
        "or          7\n",
+       "In          7\n",
+       "step        7\n",
+       "may         7\n",
        "C++         7\n",
        "are         7\n",
-       "may         7\n",
-       "step        7\n",
        "3.          7\n",
        "Under       6\n",
        "is          6\n",
-       "if          5\n",
+       "select      5\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "basic-feedback",
+   "id": "unique-chuck",
    "metadata": {},
    "source": [
     "### Reddit Image Transcriber"
@@ -324,24 +324,216 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "oriental-producer",
+   "execution_count": 14,
+   "id": "upset-kentucky",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['https://i.imgur.com/QOVhelr.png', 'https://i.imgur.com/QOVhelr.png', 'https://i.redd.it/u75r9fqi2vy61.png', 'https://i.redd.it/u75r9fqi2vy61.png', 'https://i.redd.it/l6vcz7p81wy61.png', 'https://i.redd.it/l6vcz7p81wy61.png', 'https://i.redd.it/s06l1vt9twy61.png', 'https://i.redd.it/s06l1vt9twy61.png', 'https://i.redd.it/y9009ob8ovy61.png', 'https://i.redd.it/y9009ob8ovy61.png', 'https://i.redd.it/55qilwvohvy61.png', 'https://i.redd.it/55qilwvohvy61.png', 'https://i.redd.it/pfcbiyfuawy61.png', 'https://i.redd.it/pfcbiyfuawy61.png', 'https://i.redd.it/tdvg49k9wwy61.png', 'https://i.redd.it/tdvg49k9wwy61.png', 'https://i.redd.it/5a19t4945wy61.png', 'https://i.redd.it/5a19t4945wy61.png', 'https://i.redd.it/k81hb4tklxy61.png', 'https://i.redd.it/k81hb4tklxy61.png']\n"
+     ]
+    }
+   ],
    "source": [
     "import requests\n",
+    "import json\n",
     "\n",
     "# Set a User Agent to avoid being blocked\n",
-    "data = requests.get(\"https://www.reddit.com/r/comics/.json\", headers = {'User-agent': 'your bot 0.1'}).json()"
+    "data = requests.get(\"https://www.reddit.com/r/comics/.json\", headers = {'User-agent': 'your bot 0.1'}).json()\n",
+    "\n",
+    "with open(\"reddit.json\", \"w\") as json_file:\n",
+    "    json.dump(data, json_file)\n",
+    "\n",
+    "picture_list = []\n",
+    "for item in range(25):\n",
+    "    index = data[\"data\"][\"children\"][item][\"data\"]\n",
+    "    for each in index:\n",
+    "        if isinstance(index[each],str):\n",
+    "            if \".png\" in index[each]:\n",
+    "                picture_list.append(index[each])\n",
+    "print(picture_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "agreed-poultry",
+   "execution_count": 13,
+   "id": "formal-tunnel",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "THE      32\n",
+      "OF       14\n",
+      "|        10\n",
+      "YOU      10\n",
+      "you       8\n",
+      "         ..\n",
+      "THAT      2\n",
+      "HAIL      2\n",
+      "house     2\n",
+      "®         2\n",
+      "three     2\n",
+      "Length: 259, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pytesseract\n",
+    "from PIL import Image\n",
+    "import io as io\n",
+    "\n",
+    "lines = []\n",
+    "for url in picture_list:\n",
+    "    response = requests.get(url)\n",
+    "    img = Image.open(io.BytesIO(response.content))\n",
+    "    text = pytesseract.image_to_string(img)\n",
+    "    lines.append(text)\n",
+    "    \n",
+    "string = \"\"\n",
+    "for text in lines:\n",
+    "    string += text\n",
+    "words = pd.Series(string.split())\n",
+    "print(words.value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "normal-albuquerque",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['— — ”', 'bl u', 'pa', '® +', 'oo © — oo', '— — ”', 'bl u', 'pa', '® +', 'oo © — oo', 'the', 'called', 'they want sir', 'is this their shoes really', 'good use of our time travel telephone', 'look at those shoestho', '~ ————_ @', 'noores', 'leughiegnow.com', '[ anemia ak ” eee natir', 'the', 'called', 'they want sir', 'is this their shoes really', 'good use of our time travel telephone', 'look at those shoestho', '~ ————_ @', 'noores', 'leughiegnow.com', '[ anemia ak ” eee natir', 'liar liar the old rite pants on fire', 'has been invoked', 'in accordance with the severity of thine hidden trangressions', 'didst', 'thou consume the pizza\\\\yon maiden saved for her lunch', 'liar liar the old rite pants on fire', 'has been invoked', 'in accordance with the severity of thine hidden trangressions', 'didst', 'thou consume the pizza\\\\yon maiden saved for her lunch', 'the backyard', 'the side', 'yard', 'ive been all kinds of places', 'the driveway have you been to the drive- way area', 'you are massing', 'out', \"do n't even know what\", 'should travel more', 'poorly drawn lines the backyard', 'the side', 'yard', 'ive been all kinds of places', 'the driveway have you been to the drive- way area', 'you are massing', 'out', \"do n't even know what\", 'should travel more', 'poorly drawn lines we', 'the bronze likewise', 'the blades dwarves of the of the silver seeker burning mountains', 'dwarves are at your will lend you our disposal', 'dear friends', 'swords in this upcoming battle', 'the advanced weaponry of the an xnoyn ny', 'dwarves will surely lead you to', 'all hail the techno—monolith/', '—s |', 'freaking hate those guys', 'know', 'right', 'super weird', 'we', 'the bronze likewise', 'the blades dwarves of the of the silver seeker burning mountains', 'dwarves are at your will lend you our disposal', 'dear friends', 'swords in this upcoming battle', 'the advanced weaponry of the an xnoyn ny', 'dwarves will surely lead you to', 'all hail the techno—monolith/', '—s |', 'freaking hate those guys', 'know', 'right', 'super weird', 'sir you neeo', 'choose tacob', 'right', 'who will holo off the one of', 'has to enemy so', 'can stay behind escape safely', 'mayoking sir you neeo', 'choose tacob', 'right', 'who will holo off the one of', 'has to enemy so', 'can stay behind escape safely', 'mayoking look what', 'that', 'got', 'bonsas7 nottsa palm tree', 'look what', 'that', 'got', 'bonsas7 nottsa palm tree', 'news', 'you', 'pal- scarecrowbar.com', 'arre', 'ooo', '@ scarecrowbar', 'news', 'you', 'pal- scarecrowbar.com', 'arre', 'ooo', '@ scarecrowbar', 'excuse', \"ma'am\", 'oh', \"friend's parents house\", 'scape', 'seekin /', 'old girls', 'ina house', 'favorable home life ...', 'lelir cina', '} hie', 'zelulels', 'ears parents', 'brian ls', 'excuse', \"ma'am\", 'oh', \"friend's parents house\", 'scape', 'seekin /', 'old girls', 'ina house', 'favorable home life ...', 'lelir cina', '} hie', 'zelulels', 'ears parents', 'brian ls']\n"
+     ]
+    }
+   ],
+   "source": [
+    "from textblob import TextBlob\n",
+    "\n",
+    "blob = TextBlob(string)\n",
+    "print(blob.noun_phrases)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "entire-comedy",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "has         4\n",
+       "have        4\n",
+       "how         4\n",
+       "parents     4\n",
+       "liar        4\n",
+       "right       4\n",
+       "house       4\n",
+       "look        4\n",
+       "at          4\n",
+       "those       4\n",
+       "is          6\n",
+       "will        6\n",
+       "dwarves     6\n",
+       "—           6\n",
+       "our         6\n",
+       "this        6\n",
+       "all         6\n",
+       "travel      6\n",
+       "n't         6\n",
+       "are         6\n",
+       "want        6\n",
+       "been        6\n",
+       "a           8\n",
+       "that        8\n",
+       "i           8\n",
+       "do          8\n",
+       "to         12\n",
+       "of         14\n",
+       "you        20\n",
+       "the        34\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.Series(blob.word_counts).sort_values().tail(30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "domestic-beauty",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-0.029329004329004323\n"
+     ]
+    }
+   ],
+   "source": [
+    "blob = TextBlob(text)\n",
+    "print(blob.sentiment.polarity)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "assisted-china",
+   "metadata": {},
+   "source": [
+    "### Face Finding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "conditional-lover",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "import cv2\n",
+    "\n",
+    "import numpy as np\n",
+    "import cv2\n",
+    "\n",
+    "images = ['happygroupofpeople', 'messi-ronaldo', 'threepeople']\n",
+    "\n",
+    "face_cascade = cv2.CascadeClassifier('haarcascades/haarcascade_frontalface_default.xml')\n",
+    "eye_cascade = cv2.CascadeClassifier('haarcascades/haarcascade_eye.xml')\n",
+    "\n",
+    "for image in images:\n",
+    "    img = cv2.imread('images/happygroupofpeople.jpg')\n",
+    "    gray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
+    "\n",
+    "    faces = face_cascade.detectMultiScale(gray, 1.3, 5)\n",
+    "    for (x,y,w,h) in faces:\n",
+    "        img = cv2.rectangle(img,(x,y),(x+w,y+h),(255,0,0),2)\n",
+    "        roi_gray = gray[y:y+h, x:x+w]\n",
+    "        roi_color = img[y:y+h, x:x+w]\n",
+    "        eyes = eye_cascade.detectMultiScale(roi_gray)\n",
+    "        for (ex,ey,ew,eh) in eyes:\n",
+    "            cv2.rectangle(roi_color,(ex,ey),(ex+ew,ey+eh),(0,255,0),2)\n",
+    "    cv2.imwrite(\"images/\" + image + \"_out.jpg\", img)\n",
+    "# cv2.imshow('img',img)\n",
+    "# cv2.waitKey(0)\n",
+    "# cv2.destroyAllWindows()"
+   ]
   }
  ],
  "metadata": {
