--- a/Day21/UnconventionalData.ipynb
+++ b/Day21/UnconventionalData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "sixth-plumbing",
+   "id": "boxed-birmingham",
    "metadata": {},
    "source": [
     "# Unconventional Data"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "toxic-halifax",
+   "id": "frozen-soldier",
    "metadata": {},
    "source": [
     "<em>Ishaan Thakker</em>"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "endangered-vinyl",
+   "id": "frequent-flashing",
    "metadata": {},
    "source": [
     "### PDF Extractor"
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "marine-mixer",
+   "id": "behavioral-partnership",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "dependent-threshold",
+   "id": "heated-burke",
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "binary-kansas",
+   "id": "cathedral-wages",
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "collective-camping",
+   "id": "strong-product",
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "unique-chuck",
+   "id": "collective-indiana",
    "metadata": {},
    "source": [
     "### Reddit Image Transcriber"
@@ -325,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "upset-kentucky",
+   "id": "built-decade",
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "formal-tunnel",
+   "id": "together-edwards",
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "normal-albuquerque",
+   "id": "western-snake",
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "entire-comedy",
+   "id": "after-fountain",
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "domestic-beauty",
+   "id": "tutorial-occurrence",
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "assisted-china",
+   "id": "resistant-change",
    "metadata": {},
    "source": [
     "### Face Finding"
@@ -502,7 +502,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "conditional-lover",
+   "id": "corrected-husband",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,7 +518,7 @@
     "eye_cascade = cv2.CascadeClassifier('haarcascades/haarcascade_eye.xml')\n",
     "\n",
     "for image in images:\n",
-    "    img = cv2.imread('images/happygroupofpeople.jpg')\n",
+    "    img = cv2.imread('images/' + image ) '.jpg')\n",
     "    gray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
     "\n",
     "    faces = face_cascade.detectMultiScale(gray, 1.3, 5)\n",
