--- a/Day21/UnconventionalData.ipynb
+++ b/Day21/UnconventionalData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "boxed-birmingham",
+   "id": "fabulous-insight",
    "metadata": {},
    "source": [
     "# Unconventional Data"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "frozen-soldier",
+   "id": "industrial-train",
    "metadata": {},
    "source": [
     "<em>Ishaan Thakker</em>"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "frequent-flashing",
+   "id": "foreign-edinburgh",
    "metadata": {},
    "source": [
     "### PDF Extractor"
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "behavioral-partnership",
+   "id": "advised-blond",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "heated-burke",
+   "id": "vulnerable-tournament",
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "cathedral-wages",
+   "id": "cleared-peoples",
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "strong-product",
+   "id": "collective-exemption",
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "collective-indiana",
+   "id": "disabled-quilt",
    "metadata": {},
    "source": [
     "### Reddit Image Transcriber"
@@ -325,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "built-decade",
+   "id": "architectural-anderson",
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "together-edwards",
+   "id": "timely-repair",
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "western-snake",
+   "id": "demographic-violation",
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "after-fountain",
+   "id": "enormous-posting",
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "tutorial-occurrence",
+   "id": "sealed-exercise",
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "resistant-change",
+   "id": "spare-excellence",
    "metadata": {},
    "source": [
     "### Face Finding"
@@ -501,8 +501,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "corrected-husband",
+   "execution_count": 27,
+   "id": "demonstrated-canberra",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,7 +518,7 @@
     "eye_cascade = cv2.CascadeClassifier('haarcascades/haarcascade_eye.xml')\n",
     "\n",
     "for image in images:\n",
-    "    img = cv2.imread('images/' + image ) '.jpg')\n",
+    "    img = cv2.imread('images/' + image + '.jpg')\n",
     "    gray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
     "\n",
     "    faces = face_cascade.detectMultiScale(gray, 1.3, 5)\n",
